--- a/QQMusic/Base.lproj/Main.storyboard
+++ b/QQMusic/Base.lproj/Main.storyboard
@@ -161,6 +161,11 @@
                                             <constraint firstAttribute="height" constant="30" id="ZJd-DY-tG5"/>
                                         </constraints>
                                         <color key="minimumTrackTintColor" red="0.0" green="0.66612810860000005" blue="0.0013801952190000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="touchDown:" destination="kgA-Z6-WeZ" eventType="touchDown" id="Q9v-6x-0i2"/>
+                                            <action selector="touchUp:" destination="kgA-Z6-WeZ" eventType="touchUpInside" id="nOu-wp-LiI"/>
+                                            <action selector="valueChange:" destination="kgA-Z6-WeZ" eventType="valueChanged" id="nhn-k0-o0j"/>
+                                        </connections>
                                     </slider>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
